--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=demo
+server.port=8080
 server.error.include-message=always
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/dbname
 spring.datasource.username=socks
