--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 			<version>0.11.3</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.f4b6a3</groupId>
+			<artifactId>uuid-creator</artifactId>
+			<version>5.1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
